// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class C { p: string };
Object.assign({ p: 0 }, new C);

=====================================output=====================================
class C {
  p: string;
}
Object.assign({ p: 0 }, new C());

================================================================================
`;

exports[`test2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class C { -p: string }
declare var i: C;
({ ...i });

=====================================output=====================================
class C {
  -p: string;
}
declare var i: C;
({ ...i });

================================================================================
`;

exports[`test3.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
class X {foo: number;};
const x = new X;
var a : string;
var {...a} = x;

=====================================output=====================================
// @flow
class X {
  foo: number;
}
const x = new X();
var a: string;
var { ...a } = x;

================================================================================
`;
